# todo-app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/backend/: devcontainer.json  docker-compose.development.yml
.devcontainer/frontend/: devcontainer.json  docker-compose.development.yml
.github/workflows/: gh-actions.yml  static_code_analysis.yml  static_code_analysis_backend.yml  static_code_analysis_frontend.yml
.postman/: api  api_b3c33c80-3c54-42cb-9a80-e494e167c972
grafana/dashboards/: dashboards.yaml  node_exporter_full.json  postgresql_database.json
grafana/datasource/: datasource.yml
grafana/datasources/: datasource.yml
instrumentation/alloy/: config.alloy
instrumentation/grafana/: grafana.ini
instrumentation/grafana/dashboards/: opentelemetry-apm.json
instrumentation/grafana/datasources/: datasource.yml
instrumentation/otel-collector/: otel-collector-config.yaml
instrumentation/prometheus/: prometheus.yml
instrumentation/tempo/: tempo.yaml
postman/collections/: Todo-app.json
src/app/: app.py  containers.py
src/app/exceptions/: user_not_found_exception.py
src/app/models/: base_model.py  todo.py  user.py
src/app/resources/: register.py  todos.py  todos_listing.py  user_listing.py  users.py
src/app/services/authentication_service/: authentication_service.py  authentication_service_protocol.py
src/app/services/base_database_service/: base_database_service.py
src/app/services/json_database/: json_database_service.py  todos_json_database_service.py  users_json_database_service.py
src/app/services/json_database_service/: json_database_service.py  todos_json_database_service.py  users_json_database_service.py
src/app/services/service_protocols/: database_service_protocol.py  user_service_protocol.py
src/app/utils/: enhanced_json_encoder.py
src/backend/: .coveragerc  .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/backend/.devcontainer/: devcontainer.json  docker-compose.yml
src/backend/.docker/: docker-compose.development.yml
src/backend/app/: Dockerfile  app.py  containers.py  logging.py  settings.py
src/backend/app/domain/exceptions/: login_exception.py
src/backend/app/domain/models/: base_model.py  todo.py  user.py
src/backend/app/domain/services/: authentication_service.py  authentication_service_protocol.py  database_service_protocol.py  todo_service_protocol.py  user_service_protocol.py
src/backend/app/exceptions/: login_exception.py
src/backend/app/infrastructure/: authentication_service.py  io_service.py
src/backend/app/infrastructure/json_database_service/: json_database_service.py  todos_json_database_service.py  users_json_database_service.py
src/backend/app/infrastructure/sql_database_service/: base_service.py  engine.py  models.py  todos_service.py  users_service.py
src/backend/app/models/: base_model.py  todo.py  user.py
src/backend/app/presentation/fastapi/: app.py  app_factory.py  utils.py
src/backend/app/presentation/fastapi/exceptions/: login_error.py  register_error.py  todo_not_found_error.py  user_not_found_error.py
src/backend/app/presentation/fastapi/models/: todo.py  user.py  user_create_data.py  user_update_data.py
src/backend/app/presentation/fastapi/resources/: login.py  register.py  todos.py  todos_listing.py  user_listing.py  users.py
src/backend/app/presentation/flask/: app_factory.py  utils.py
src/backend/app/presentation/flask/resources/: login.py  register.py  todos.py  todos_listing.py  user_listing.py  users.py
src/backend/app/presentation/models/: list_response.py  login_error.py  path_id.py  register_data.py  register_error.py  todo_create_data.py  todo_update_data.py  todos_query.py  user.py  user_create_data.py
src/backend/app/resources/: login.py  register.py  todos.py  todos_listing.py  user_listing.py  users.py
src/backend/app/services/: authentication_service.py  io_service.py
src/backend/app/services/authentication_service/: authentication_service.py  authentication_service_protocol.py
src/backend/app/services/json_database_service/: json_database_service.py  todos_json_database_service.py  users_json_database_service.py
src/backend/app/services/service_protocols/: authentication_service_protocol.py  database_service_protocol.py  io_service_protocol.py  todo_service_protocol.py  user_service_protocol.py
src/backend/app/services/sql_database_service/: base_service.py  engine.py  models.py  todos_service.py  users_service.py
src/backend/app/utils/: json_utils.py
src/backend/tests/: conftest.py  pyproject.toml
src/backend/tests/factories/: base_factories.py  todo_factory.py  user_factory.py
src/backend/tests/models/: test_base_model.py  test_todo.py  test_user.py
src/backend/tests/services/: todo_json_database_test.py  user_json_database_test.py
src/backend/tests/services/authentication_service/: authentication_service_test.py  login_test.py  register_test.py
src/backend/tests/services/json_database/: todo_database_test.py  user_database_test.py
src/backend/tests/services/sqlalchemy_database/: conftest.py  todo_database_test.py  user_database_test.py
src/frontend/: .prettierignore  Dockerfile  README.md  index.html  package-lock.json  package.json  svelte.config.js
src/frontend/src/: App.svelte
src/frontend/src/components/: FormItem.svelte  NavBar.svelte  StatusMessage.svelte  UserRegisterForm.svelte
src/frontend/src/lib/: CreateTodoForm.svelte  CreateTodoModal.svelte  EditTodoForm.svelte  EditTodoModal.svelte  FormItem.svelte  LoginForm.svelte  NavBar.svelte  SignupForm.svelte  TodoItem.svelte  TodoListItem.svelte  TodoListing.svelte  TodoModal.svelte
src/frontend/src/pages/: Dashboard.svelte  Login.svelte  Signup.svelte
src/frontend/src/routes/: +layout.svelte  index.svelte
src/frontend/src/services/: API.js  TodoApi.js  Users.js
src/tests/models/: test_todo.py  test_user.py
(+13 files in other folders)
